--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.2.10",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "flatted": "^3.2.9",
     "pg": "^8.11.3",
